--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="promo">
+            <div class="main-header">
             <a class="logo">
               <img src="src/images/logo.png" width="25" height="25">
                SCANDI
             </a>
             <nav>
-                <ul>
+                <ul class="header-links">
                     <li><a href="#" class="nav-link">О компании</a></li>
                     <li><a href="#" class="nav-link">Портфолио</a></li>
                     <li><a href="#" class="nav-link">Команда</a></li>
@@ -25,101 +26,133 @@
                 </ul>
             </nav>
             <a href="#" class="phone">+7 (981) 857-46-24</a>
-        </div>
-    </header>
-
-    <main>
+            </div>
         <section class="main">
-            <div class="promo">
+            <div>
                 <h1 class="main-heading">Поможем сделать вашу квартиру уютнее</h1>
                 <p class="promo-description">Подбираем текстиль, мебель и аксессуары под ваш интерьер, находим магазины и помогаем организовать доставку</p>
                 <a href="#form" class="button">Оставить заявку</a>
             </div>
         </section>
+    </div>
+</header>
+    <main>
         <section class="about">
-            <h2 class="section-title">О нас</h2>
-            <img src="src/images/about-page.jpg" alt="Сервировка стола">
-            <p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то, что по-настоящему вдохновляет дизайнеров нашей студии.</p>
-            <p>Наш коллектив сделает все, чтобы после сотрудничества с нами, Вам было приятно сказать: « Да! Это именно то, что действительно достойно моего дома!»</p>
+            <h2 class="section-title about-heading">О нас</h2>
+            <div class="about-container">
+                <img src="src/images/about-page.jpg" alt="Сервировка стола">
+                <div class="about-text">
+                    <p class="paragraph-about">Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то, что по-настоящему вдохновляет дизайнеров нашей студии.</p>
+                    <p class="paragraph-about">Наш коллектив сделает все, чтобы после сотрудничества с нами, Вам было приятно сказать: « Да! Это именно то, что действительно достойно моего дома!»</p>
+                </div>
+            </div>
         </section>
         <section class="profits">
-            <ul>
+            <ul class="profits-list">
                 <li class="metrics"><span class="font-size-50">5</span><br>лет опыта</li>
                 <li class="metrics"><span class="font-size-50">100</span><br>проектов</li>
                 <li class="metrics"><span class="font-size-50">10</span><br>наград</li>
             </ul>
         </section>
         <section class="portfolio">
-            <h2 class="section-title">Наши работы</h2>
-          <img src="src/images/mainbedrooom.jpg" alt="Спальня в бохо-стиле">
-          <img src="src/images/kitchen.jpg" alt="Светлая кухня с островком">
-          <img src="src/images/living-room.jpg" alt="Гостиная с цветами">
-          <img src="src/images/bathroom.jpg" alt="Необычная ванная в пастельных тонах">
-          <a href="#" class="other-photos-link">Смотреть еще</a>
+            <h2 class="section-title portfolio-heading">Наши работы</h2>
+            <div class="images-container">
+                <img class="portfolio-image" src="src/images/mainbedrooom.jpg" alt="Спальня в бохо-стиле" height="451" width="488">
+                <img class="portfolio-image" src="src/images/kitchen.jpg" alt="Светлая кухня с островком" height="451" width="692">
+                <img class="portfolio-image" src="src/images/living-room.jpg" alt="Гостиная с цветами" height="451" width="692">
+                <img class="portfolio-image" src="src/images/bathroom.jpg" alt="Необычная ванная в пастельных тонах" height="451" width="488">
+            </div>
+            <a href="#" class="other-photos-link">Смотреть еще</a>
         </section>
             <section class="team">
-                <h2 class="section-title">Команда</h2>
-                <figure>
-                    <img src="src/images/photo1.jpg" alt="Дизайнер Маша">
-                    <figcaption>Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается
+                <h2 class="section-title team-heading">Команда</h2>
+                <div class="team-container">
+                    <figure class="team-member">
+                        <img src="src/images/photo1.jpg" alt="Дизайнер Маша">
+                        <figcaption>Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается
                         и помогает сделать вашу квартиру красивой и уютной.</figcaption>
-                </figure>
-                <figure>
-                    <img src="src/images/photo2.jpg" alt="Менеджер Саша">
-                    <figcaption>С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы
+                    </figure>
+                    <figure class="team-member">
+                        <img src="src/images/photo2.jpg" alt="Менеджер Саша">
+                        <figcaption>С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы
                         и ответит на все вопросы.</figcaption>
-                </figure>
-                <figure>
-                    <img src="src/images/photo3.jpg" alt="Дизайнер Катя">
-                    <figcaption>Катя тоже занимается дизайном.
+                    </figure>
+                    <figure class="team-member">
+                        <img src="src/images/photo3.jpg" alt="Дизайнер Катя">
+                        <figcaption>Катя тоже занимается дизайном.
                         Она всегда находит общий язык
                         с клиентами и точно знает,
                         как обустроить дом так, чтобы вам понравилось.</figcaption>
-                </figure>
-            </section>
-            <section class="how-we-work">
-                <h2 class="section-title">Как мы работаем</h2>
-                <ol>
-                    <li>Знакомимся, выезжаем
-                        на объект, утверждаем концепцию, подписываем договор.</li>
-                    <li>Подбираем мебель, текстиль, аксессуары. Делаем 3D-
-                        визуализацию.</li>
-                    <li>Находим нужные магазины, помогаем с доставкой
-                        и оплатой товаров.</li>
-                    <li>Воплощаем проект в жизнь:
-                        расставляем мебель и цветы, вешаем шторы, находим места для мелочей</li>
-                </ol>
-                </section>
+                    </figure>
+                </div>
+                <section class="how-we-work">
+                    <h2 class="section-title process-heading">Как мы работаем</h2>
+                    <div class="process-list">
+                        <div class="process-list-radius-conteiner">
+                            <div class="process-list-radius">1</div>
+                            <p class="process-point">Знакомимся, выезжаем
+                                на объект, утверждаем концепцию, подписываем договор.</p>
+                        </div>
+                        <div class="process-list-radius-conteiner">
+                            <div class="process-list-radius">2</div>
+                            <p class="process-point">Подбираем мебель, текстиль, аксессуары. Делаем 3D-
+                                визуализацию.</p>
+                        </div>
+                        <div class="process-list-radius-conteiner">
+                            <div class="process-list-radius">3</div>
+                            <p class="process-point">Находим нужные магазины, помогаем с доставкой
+                                и оплатой товаров.</p>
+                        </div>
+                        <div class="process-list-radius-conteiner">
+                            <div class="process-list-radius">4</div>
+                            <p class="process-point">Воплощаем проект в жизнь:
+                                расставляем мебель и цветы, вешаем шторы, находим места для мелочей</p>
+                        </div>
+                        </div>
+                    </section>
+            </section>   
         <article class="reviews">
-            <h2 class="section-title">Отзывы</h2>
-            <q>Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.Работа шла быстро, было очень приятно общаться и взаимодествовать
-                с сотрудниками. Не ожидала, что это будет так легко!Буду советовать и своим друзьям к вам обращаться!</q>
-            <p>АННА БЕЛОВСКАЯ</p>
-            <img src="src/images/review1.jpg" alt="Отзыв - красивая, светлая гостиная">
-            <img src="src/images/review2.jpg" alt="Отзыв - стильная кухня с барной стойкой">
+            <h2 class="section-title review-heading">Отзывы</h2>
+            <div class="review-container">
+                <img src="./src/images/arrow-left.svg" class="arrow-left">
+                <img src="./src/images/arrow-right.svg" class="arrow-right">
+                <blockquote class="review-text">
+                    <q class="inner-review-text">Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.<br><br>
+                    Работа шла быстро, было очень приятно общаться и взаимодествовать
+                    с сотрудниками. Не ожидала, что это будет так легко!<br><br>
+                    Буду советовать и своим друзьям к вам обращаться!</q><br><br>
+                    <p class="inner-review-author">АННА БЕЛОВСКАЯ</cite>
+                </blockquote>
+                <div class="review-images">
+                    <img src="src/images/review1.jpg" alt="Отзыв - красивая, светлая гостиная" class="living-room-image">
+                    <img src="src/images/review2.jpg" alt="Отзыв - стильная кухня с барной стойкой"class="kitchen-image">
+                </div>           
+        </div>
         </article>
         <section class="form">
-            <form>
+            <form class="form-inner">
                 <h2 class="section-title form-title">Оставить заявку</h2>
                 <p class="form-description">Оставьте свои контакты. Менеджер перезвонит
                     в удобное вам время и ответит на все вопросы.</p>
-                    <label class="form-inputs">
+                    <div class="form-row">
+                    <label for="name" class="form-inputs"></label>
                         Ваше имя
-                        <input type="text" name="name">
-                      </label>
-                      <label class="form-inputs">
+                        <input type="text" name="name" id="name">
+                    </div>
+                        <div class="form-row">
+                    <label for="phone" class="form-inputs"></label>
                         Введите телефон
-                        <input type="tel" name="name">
-                      </label>
-                      <button class="button">Оставить заявку</button>
+                        <input type="tel" name="phone" id="phone">
+                    </div>
+                      <button class="button submit">Оставить заявку</button>
                 </form>
-            <img src="src/images/map.png">
+            <img src="src/images/map.png" class="map">
         </section>
     </main>
-    <footer>
+    <footer class="main-footer">
         <div class="contacts">
             <span>+7 (981) 857-46-24</span>
-            <span>г. Санкт-петербург, ул. Большая Конюшенная, 19</span>
+            <span class="address">г. Санкт-петербург, ул. Большая Конюшенная, 19</span>
         </div>
         <div class="owner">
             <span>ИП Королёва А.А.</span>
